# go-bazel-trial

./: BUILD.bazel  README.md  WORKSPACE  go.mod
